Add balance enpoint
